--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,12 @@
-absl-py==0.7.0
-appnope==0.1.0
-astor==0.7.1
-attrs==18.2.0
-Automat==0.7.0
-backcall==0.1.0
-beautifulsoup4==4.6.3
-bleach==3.1.0
-bs4==0.0.1
-certifi==2018.11.29
-chardet==3.0.4
+Bootstrap-Flask==1.0.10
 Click==7.0
-constantly==15.1.0
-construct==2.9.45
-cycler==0.10.0
-deap==1.2.2
-decorator==4.3.2
-defusedxml==0.5.0
-entrypoints==0.3
-et-xmlfile==1.0.1
+dominate==2.3.5
 Flask==1.0.3
-Flask-Excel==0.0.7
-gast==0.2.2
-grpcio==1.18.0
-h5py==2.9.0
-hyperlink==18.0.0
-idna==2.8
-incremental==17.5.0
-ipykernel==5.1.0
-ipython==7.2.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
+Flask-WTF==0.14.2
 itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.13.2
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-kiwisolver==1.0.1
-lml==0.0.9
-Markdown==3.0.1
-MarkupSafe==1.1.0
-matplotlib==3.0.2
-mistune==0.8.4
-mock==2.0.0
-nbconvert==5.4.0
-nbformat==4.4.0
-notebook==5.7.4
-numpy==1.16.0
-openpyxl==2.5.14
-pandas==0.24.0
-pandocfilters==1.4.2
-parso==0.3.2
-pbr==5.1.1
-pexpect==4.6.0
-pickleshare==0.7.5
-ply==3.11
-powerline-status==2.7
-prometheus-client==0.5.0
-prompt-toolkit==2.0.7
-protobuf==3.6.1
-ptyprocess==0.6.0
-pyasn1==0.4.5
-pycryptodomex==3.7.3
-pyecharts-jupyter-installer==0.0.3
-pyexcel==0.5.13
-pyexcel-handsontable==0.0.2
-pyexcel-io==0.5.17
-pyexcel-webio==0.1.4
-pyexcel-xls==0.5.8
-pyexcel-xlsx==0.5.7
-Pygments==2.3.1
-PyHamcrest==1.9.0
-pyparsing==2.3.1
-pysmi==0.3.3
-pysnmp==4.4.9
-python-dateutil==2.7.5
-pytz==2018.9
-PyYAML==3.13
-pyzmq==17.1.2
-qtconsole==4.4.3
-Rails==0.0.5
-redis==3.2.1
-requests==2.21.0
-scikit-learn==0.20.2
-scipy==1.2.0
-seaborn==0.9.0
-Send2Trash==1.5.0
-six==1.12.0
-sklearn==0.0
-stevedore==1.30.0
-tensor==0.3.6
-tensorboard==1.12.2
-tensorflow==1.13.0rc2
-tensorflow-estimator==1.13.0
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.4.2
-texttable==1.6.1
-tornado==5.1.1
-traitlets==4.3.2
-Twisted==18.9.0
-urllib3==1.24.1
-virtualenv==16.1.0
-virtualenv-clone==0.4.0
-virtualenvwrapper==4.8.2
-wcwidth==0.1.7
-webencodings==0.5.1
-WebOb==1.8.5
-Werkzeug==0.14.1
-widgetsnbextension==3.4.2
-xlrd==1.2.0
-xlwt==1.3.0
-zope.interface==4.6.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+python-dotenv==0.10.3
+visitor==0.1.3
+Werkzeug==0.15.4
+WTForms==2.2.1
