--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,45 @@
+alabaster==0.7.12
+-e git+https://github.com/kennyworkman/alignment_app.git@2455933f3897d5b3efeffeca61887580c0460804#egg=alignment
+atomicwrites==1.3.0
+attrs==19.1.0
+Babel==2.7.0
 Bootstrap-Flask==1.0.10
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
+docutils==0.14
 dominate==2.3.5
 Flask==1.0.3
 Flask-WTF==0.14.2
+gunicorn==19.9.0
+idna==2.8
+imagesize==1.1.0
+importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+more-itertools==7.0.0
+packaging==19.0
+pluggy==0.12.0
+py==1.8.0
+Pygments==2.4.2
+pyparsing==2.4.0
+pytest==4.6.3
 python-dotenv==0.10.3
+pytz==2019.1
+requests==2.22.0
+six==1.12.0
+snowballstemmer==1.9.0
+Sphinx==2.1.2
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+urllib3==1.25.3
 visitor==0.1.3
+wcwidth==0.1.7
 Werkzeug==0.15.4
 WTForms==2.2.1
+zipp==0.5.1
